refactor: clean up the un-used test functions.